--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 									</div>
 								</article>
 								<article>
-									<a class="image" target="_blank">
+									<a href="https://www.youtube.com/watch?v=egA84TgKzyI" class="image" target="_blank">
 										<img src="images/gallery/thumbs/stairchair.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Product | NYC EMTs</h3>
-										<p>NYC EMTs face unique challenges carrying patients down non-elevator buildings. We underwent the full product design lifecycle to come up with a solution.</p>
+										<p>NYC EMTs face unique challenges carrying patients down non-elevator buildings. We designed from this human need to come up with StairSafe.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Coming Soon</span></li>
+											<li><span class="button small">Video</span></li>
 										</ul>
 									</div>
 								</article>
