--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 							<p class="major">I am a New York-based product manager who is just as passionate about exploring human-centered problems as I am about solving them.</p>
 							<p class="major">I am currently open to full-time product roles!</p>
 							<ul class="actions stacked">
-								<li><a href="https://drive.google.com/file/d/1pa8Q0BryL8YS8ibG1vrzBkexwg_qknMW/view?usp=share_link" target="_blank" class="button big wide smooth-scroll-middle">Resume</a>&emsp;<a href="mailto:jshu23@gsb.columbia.edu" class="button big wide smooth-scroll-middle">Contact Me</a></li>
+								<li><a href="https://drive.google.com/file/d/1mbURC8Kms4jCz9RHZETP8fMHtCP20hlM/view?usp=share_link" target="_blank" class="button big wide smooth-scroll-middle">Resume</a>&emsp;<a href="mailto:jshu23@gsb.columbia.edu" class="button big wide smooth-scroll-middle">Contact Me</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/profilepic2.jpg" alt="" />
+							<img src="images/profilepic.jpg" alt="" />
 						</div>
 					</section>
 
